# gemini_grounding_search

./: .gitignore  CLAUDE.md  README.md  evaluation.py  main.py  pyproject.toml  sheet_2_output.csv  sheet_2_specs_output.csv  sheet_2_specs_output_evaluation_test.csv  sheet_3_battery_output.csv
archived/: sheet_3_output.csv  sheet_3_specs_output.csv
data/: sheet_2.csv  sheet_3.csv
src/: __init__.py  base_extractor.py  battery_info_extractor.py  config.py  gemini_grounding_search.py  models.py  product_specs_extractor.py  sheet_2_schema.py  sheet_3_schema.py  utils.py
