[project]
name = "grounding-search"
version = "0.1.0"
description = "Product information extraction tool using Google's Gemini AI with grounded search capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.29.0",
    "pydantic>=2.0.0",
]

[project.scripts]
grounding-search = "main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
src = "src"

